<resources>
    <string name="app_name">Peace</string>
    <string name="arabic">لَآ اِلٰهَ اِلَّااللهُ مُحَمَّدٌ رَّسُولُ اللہِِ</string>
    <string name="pronunce">Pronunciation : Laa ilaaha illal Lahoo Muhammadur Rasool Ullah.</string>
    <string name="meaning">Meaning : There is no God Besides Allah, Hazrat Muhammad (SAW) is the messenger of Allah.</string>
    <string name="uchcharon">উচ্চারণ : লা ইলাহা ইল্লাল্লাহ মুহাম্মাদুর রাসুলুল্লাহ |</string>
    <string name="ortho">অর্থ : আল্লাহ ছাড়া অন্য কেউ উপাস্য নাই এবং হযরত মুহাম্মদ (Saw) তাঁর প্রেরিত রসূল |</string>
    <string name="shahadat_arabic">ٗاشْهَدُ انْ لّآ اِلهَ اِلَّا اللّهُ وَحْدَه لَا شَرِيْكَ لَه، وَ اَشْهَدُ اَنَّ مُحَمَّدً اعَبْدُهوَرَسُولُه</string>
    <string name="shahadat_pronounce">Pronunciation : Ashahadu Al Laa ilaaha illal Lahu Wahdahoo Laa Shareeka Lahoo Wa Ash Hadu Anna Mohammadan Abdu Hoo Wa Rasooluhoo.</string>
    <string name="shahadat_meaning">Meaning : I bear witness that (there is) no god except Allah; One is He, no partner hath He, and I bear witness that Muhammad is His Servant and Messenger.</string>
    <string name="shahadat_uchcharon">উচ্চারণ : আশহাদু আল লা-ইলাহা ইল্লাল্লাহু ওয়াহ্দাহু লা-শারিকালাহু ওয়াশহাদু আন্না মুহাম্মাদান আবদুহু ওয়া রাসুলুহু |</string>
    <string name="shahadat_ortho">অর্থ : আমি সাক্ষ্য দিচ্ছি যে, আল্লাহ ছাড়া অন্য কেউ ইবাদতের উপযুক্ত না এবং আল্লাহর কোন অংশীদার নেই | আমি আরো সাক্ষ্য দিচ্ছি যে, হযরত মুহাম্মদ(সাঃ ) আল্লার শ্রেষ্ঠ বান্দা এবং আল্লাহ প্রেরিত রসূল |</string>
    <string name="tawheed_arabic">لَآ اِلٰهَ اِلَّا اللهُ وَحْدَهٗ لَا شَرِيْكَ لَهٗ لَهُ الْمُلْكُ وَ لَهُ الْحَمْدُ يُحْىٖ وَ يُمِيْتُ وَ هُوَحَیٌّ لَّا يَمُوْتُ اَبَدًا اَبَدًاؕ ذُو الْجَلَالِ وَالْاِكْرَامِؕ بِيَدِهِ الْخَيْرُؕ وَهُوَ عَلٰى كُلِّ شیْ ٍٔ قَدِیْرٌؕ‎ </string>
    <string name="tawheed_pronounce">Pronunciation : Laa ilaha illal Lahoo Wahdahoo Laa Shareekalahoo Lahul Mulko Walahul Hamdo Yuhee Wa Yumeeto Wa Hoa Haiy Yul La Yamooto Abadan Abada Zul Jalali Wal ikraam Beyadihil Khair. Wa hoa Ala Kulli Shai In Qadeer.</string>
    <string name="tawheed_meaning">Meaning : (There is) no god except Allah – One is He, no partners hath He. His is the Dominion, and His is the Praise. He gives life and sees to the natural cycle of life, life on Earth ends (death) for there is the eternal after life. He is eternal and ubiquitous. He of Majesty and Munificence. Within His Hand is (all) good. And He is, upon everything, Able (to exert His Will).</string>
    <string name="tawheed_uchcharon">উচ্চারণ : লা ইলাহা ইল্লাল্লাহু ওয়াহ্দাহু লা শারিকা লাহু, লাহুল মুলকু ওলাহুল হামদু উহয়ী ওয়া ইয়োমিতু ওয়া হুয়া হাইয়ুল লা ইয়ামুতু আবাদান আবাদা জুল জালালী ওয়াল ইকরাম বি ইয়াদিহিল খাইর ওয়া হুয়া আলা কুল্লি শাইয়িন কাদীর |</string>
    <string name="tawheed_ortho">অর্থ : আল্লাহ ব্যতীত কোন উপাস্য নেই | তিনি এক ও অদ্বিতীয় | তার কোন অংশীদার নেই | সকল ক্ষমতা এবং প্রশংসা তার জন্য | তিনি জীবন ও মৃত্যুর মালিক | তিনি চিরঞ্জীব, সকল সম্মানের মালিক | তার হাতেই সকল মঙ্গল সবকিছুর উপর তার ক্ষমতা রয়েছে |</string>
    <string name="tamjid_arabic">سُبْحَان اللهِ وَالْحَمْدُلِلّهِ وَلا إِلهَ إِلّااللّهُ وَاللّهُ أكْبَرُ وَلا حَوْلَ وَلاَ قُوَّةَ إِلَّا بِاللّهِ الْعَلِيِّ الْعَظِيْم</string>
    <string name="tamjid_pronounce">Pronunciation : Subhanallahe Wal Hamdulillahe Wa Laa ilaha illal Laho Wallahooakbar. Wala Haola Wala Quwwata illa billahil AliYil Azeem.</string>
    <string name="tamjid_meaning">Meaning : Exalted is Allah, and [all] praise is due to Allah, and there is no deity except Allah, and Allah is the Greatest. And there is no might nor power except in Allah, the Most High, the Most Great.</string>
    <string name="tamjid_uchcharon">উচ্চারণ : সুবহানআল্লাহি ওয়াল হামদু লিল্লাহি ওয়ালা ইলাহা ইল্লাল্লাহু ওয়াল্লাহু আকবার, ওয়ালা হাওলা ওয়ালা কুয়াতা ইল্লা বিল্লাহিল আলীইল আজিম |</string>
    <string name="tamjid_ortho">অর্থ : মহিমান্বিত আল্লাহর, সমস্ত প্রশংসা আল্লাহর | আল্লাহ ছাড়া কোন মাবুদ নাই | আল্লাহ মহান | সমস্ত প্বিত্রতা আল্লাহর সকল প্রশংসা আল্লাহর | আল্লাহ ছাড়া কোন শক্তি নাই, কোন ক্ষমতা নাই, তিনি সম্মানিত, তিনি মহান |</string>
    <string name="ans_1">Repeat what the Muaththin says, except for when he says : </string>
    <string name="salah">حَيَّ عَلَى الصَّلاَةِ وَحَيَّ عَلَى الْفَلَاحِ</string>
    <string name="salah_pronounce">Hayya alas-Salaah (hasten to the prayer) and Hayya alal-Falaah (hasten to salvation). Here you should say : </string>
    <string name="la_haola">لَا حَوْلَ وَلَا قُوَّةَ إِلَّا بِاللهِ</string>
    <string name="la_haola_pronounce">Pronunciation : Laa hawla wa laa quwwata illaa billaah.</string>
    <string name="la_haola_meaning">Meaning : There is no might and no power except by Allah.</string>
    <string name="ans_2">The following is to be recited in Arabic after the Muaththin’s Tashahhud or the words of affirmation of Faith : </string>
    <string name="after_la_haola">وَأَنَا أَشْهَدُ أَنْ لَا إِلَهَ إِلَّا اللهُ وَحْدَهُ لَا شَرِيكَ لَهُ وَأَنَّ مُحَمَّداً عَبْدُهُ وَرَسُولُهُ، رَضِيتُ بِاللهِ رَبَّاً وَبِمُحَمَّدٍ رَسُولاً وَبِالإِْسلاَمِ دِيناً</string>
    <string name="after_la_haola_pronounce">Pronunciation : Wa anaa ash-hadu al laa ilaaha illallaahu wahdahu laa shareeka lahu wa anna Muhammadan abduhu wa Rasooluhu, radheetu billaahi Rabban, wa bi-Muhammadin Rasoolan wa bil islaami deenan.</string>
    <string name="after_la_haola_meaning">Meaning : I bear witness that none has the right to be worshipped but Allah alone, Who has no partner, and that Muhammad is His slave and His Messenger. I am pleased with Allah as my Lord, with Muhammad as my Messenger and with Islam as my religion.</string>
    <string name="bangla_ans1">মুয়াজ্জিন- اَللهُ اَكْبَرْ (আল্লাহু আকবার) ৪ বার</string>
    <string name="bangla_ans2">শ্রবণকারী- اَللهُ اَكْبَرْ (আল্লাহু আকবার) ৪ বার</string>
    <string name="bangla_ans3">মুয়াজ্জিন- اَشْهَدُ اَنْ لَا اِلَهَ اِلَّا الله (আশহাদু আল লাইলাহা ইল্লাল্লাহ) ২ বার</string>
    <string name="bangla_ans4">শ্রবণকারী- اَشْهَدُ اَنْ لَا اِلَهَ اِلَّا الله (আশহাদু আললা ইলাহা ইল্লাল্লাহ) ২ বার</string>
    <string name="bangla_ans5">মুয়াজ্জিন- اَشْهَدُ اَنَّ مُحَمَّدًا رَّسُوْلُ اللهِ (আশহাদু আন্না মুহাম্মাদার রাসুলুল্লাহ) ২ বার</string>
    <string name="bangla_ans6">শ্রবণকারী- اَشْهَدُ اَنَّ مُحَمَّدًا رَّسُوْلُ اللهِ (আশহাদু আন্না মুহাম্মাদার রাসুলুল্লাহ) ২ বার</string>
    <string name="bangla_ans7">মুয়াজ্জিন- حَيَّ عَلَي الصَّلوةِ (হাইয়্যা আলাস সালাহ) ২ বার</string>
    <string name="bangla_ans8">শ্রবণকারী- لَا حَوْلَ وَ لَا قُوَّةَ اِلَّا بِاللهِ (লা হাওলা ওয়া লা কুয়্যাতা ইল্লা বিল্লাহ) ২ বার</string>
    <string name="bangla_ans9">মুয়াজ্জিন- حَيَّ عَلَي الفَلَاحِ (হাইয়্যা আলাল ফালাহ) ২ বার</string>
    <string name="bangla_ans10">শ্রবণকারী- لَا حَوْلَ وَ لَا قُوَّةَ اِلَّا بِاللهِ (লা হাওলা ওয়া লা কুয়্যাতা ইল্লা বিল্লাহ) ২ বার</string>
    <string name="dua_arabic">اللَّهُمَّ رَبَّ هَذِهِ الدَّعْوَةِ التَّامَّةِ، وَالصَّلَاةِ الْقَائِمَةِ، آتِ مُحَمَّدا نلْوَسِيلَةَ وَالْفَضِيلَةَ، وَابْعَثْهُ مَقَاماً مَحْمُودا نلَّذِي وَعَدْتَهُ، [إَنَّكَ لَا تُخْلِفُ الْمِيعَادَ]</string>
    <string name="dua_pronounce">Pronunciation : Allaahumma Rabba haathihid-da watit-taammati wassalaatil-qaa imati, aati Muhammadanil-waseelata walfadheelata, wab ath-hu maqaamam-mahmoodanil-lathee wa adtahu, [innaka laa tukhliful-mee aad]</string>
    <string name="dua_meaning">Meaning : O Allah , Lord of this perfect call and established prayer. Grant Muhammad the intercession and favor, and raise him to the honored station You have promised him, [verily You do not neglect promises].</string>
    <string name="dua_uchcharon">উচ্চারণ : আল্লা-হুম্মা রব্বা হাজিহিদ দা’অতীত্ তাম্মাতি অস্স্বলাতিল ক্ব-ইমাতি আ-তি মুহাম্মানিল্ অসীলাতা অল্ ফাযীলাতা অবআ’স্হু মাক্বামাম্ মাহমুদানিল্লাযী অ-আ’দ্তাহু, ইন্নাকা লা-তুখলিফুল মীআ’দ |</string>
    <string name="dua_ortho">অর্থ : এইসব পরিপূর্ণ আহ্বান ও আসন্ন নামাযের প্রভু | হে আল্লাহ্ ! হযরত মুহাম্মাদ (সাঃ ) কে জান্নাতের অসীলা নামক মনযিলটিও সম্মান দান করো এবং তুমি তাঁকে সেই মক্কা-মে মাহমুদ বা প্রশংসিত জায়গায় পৌঁছে দিও, যা তাঁকে দেবার জন্য তুমি ওয়াদা করেছো | নিশ্চয় তুমি ওয়াদা খিলাফ করো না |</string>
    <string name="kursi_arabic">اللَّهُ لاَ إِلَهَ إِلاَّ هُوَ الْحَيُّ الْقَيُّومُ لاَ تَأْخُذُهُ سِنَةٌ وَلاَ نَوْمٌ لَهُ مَا فِي السَّمَاوَاتِ وَمَا فِي الأَرْضِ مَنْ ذَا الَّذِي يَشْفَعُ عِنْدَهُ إِلاَّ بِإِذْنِهِ يَعْلَمُ مَا بَيْنَ أَيْدِيهِمْ وَمَا خَلْفَهُمْ وَلاَ يُحِيطُونَ بِشَيْءٍ مِنْ عِلْمِهِ إِلاَّ بِمَا شَاءَ وَسِعَ كُرْسِيُّهُ السَّمَاواتِ وَالأَرْضَ وَلاَ يَئُودُهُ حِفْظُهُمَا وَهُوَ الْعَلِيُّ الْعَظِيمُ</string>
    <string name="kursi_pronounce">Pronunciation : Allahu laaa ilaaha illaa huwal haiyul qai-yoom; laa taakhuzuhoo sinatunw wa laa nawm; lahoo maa fissamaawaati wa maa fil ard; man zallazee yashfau indahooo illaa be iznih; ya lamu maa baina aideehim wa maa khalfahum; wa laa yuheetoona beshai immin ilmihee illa be maa shaaaa; wasi a kursiyyuhus samaa waati wal arda wa la ya ooduho hifzuhumaa; wa huwal aliyyul  azeem.</string>
    <string name="kursi_meaning">Meaning : Allah! There is no god but He - the Living, The Self-subsisting, Eternal. No slumber can seize Him Nor Sleep. His are all things In the heavens and on earth. Who is there can intercede In His presence except As he permitteth? He knoweth What (appeareth to His creatures As) Before or After or Behind them. Nor shall they compass Aught of His knowledge Except as He willeth. His throne doth extend Over the heavens And on earth, and He feeleth No fatigue in guarding And preserving them, For He is the Most High. The Supreme (in glory)</string>
    <string name="quote1">“Do not lose hope, nor be sad.” Quran 3:139</string>
    <string name="quote2">“When you forget that you need Allah (God), He puts you in a situation that causes you to call upon Him. And that’s for your own good.” Omar Suleiman</string>
    <string name="quote3">“The life of this world is merely enjoyment of delusion.” Quran 3:185</string>
    <string name="quote4">“Allah (God) does not burden a soul beyond that it can bear.” Quran 2:286</string>
    <string name="quote5">“And whoever turns away from My remembrance – indeed, he will have a depressed life.” Quran 20:124</string>
    <string name="quote6">“If you give thanks, I will give you more.” Quran 14:7</string>
    <string name="quote7">“The best among you are those who have the best manners and best character.” Sahih Bukhari 6029</string>
    <string name="quote8">“Indeed, Allah (God) will not change the condition of a people until they change what is in themselves.” Qur’an 13:11</string>
    <string name="quote9">“The richest of the rich is the one who is not a prisoner to greed.” Ali Ibn Abi Talib (R.A)</string>
    <string name="quote10">“Every soul will taste death. Then unto Us will you be returned.” Quran 29:57</string>
    <string name="quote11">“No one will reap except what they sow.” Quran 6:164</string>
    <string name="quote12">“Indeed, that is My Path – perfectly straight. So follow it and do not follow other ways, for they will lead you away from His Way. This is what He has commanded you, so perhaps you will be conscious of Allah (God).” Quran 6:153</string>
    <string name="quote13">“Allah is with the doers of good.” Quran 29:69</string>
    <string name="quote14">“And warn them [O Muhammad], of the Day of Regret, when the matter will be concluded; and [yet], they are in [a state of] heedlessness, and they do not believe.” Quran 19:39</string>
    <string name="quote15">“And the Hereafter is better for you than the first [life]. And your Lord is going to give you, and you will be satisfied.” Quran 93:4-5</string>
    <string name="quote16">“And He found you lost and guided [you]. And He found you poor and made [you] self-sufficient.” Quran 93:7-8</string>
    <string name="quote17">“Sell this life for the next and you win both of them. Sell the next life for this and you lose both of them.” Hasan al-Basri</string>
</resources>