<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/boook3"
    tools:context=".Ajan_Bangla">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="130dp"
        android:layout_height="72dp"
        android:layout_marginTop="180dp"
        android:fontFamily="@font/artifika"
        android:text="আযানের উত্তর"
        android:textAlignment="center"
        android:textColor="#0FB903"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView2"
        android:layout_width="205dp"
        android:layout_height="305dp"
        android:layout_marginTop="18dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <ScrollView
            android:layout_width="205dp"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="2dp"
                    android:text="@string/bangla_ans1"
                    android:textAlignment="center"
                    android:textColor="#020202"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/bangla_ans2"
                    android:textAlignment="center"
                    android:textColor="#020202"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@+id/textView1"
                    app:layout_constraintStart_toStartOf="@+id/textView1"
                    app:layout_constraintTop_toBottomOf="@+id/textView1" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/bangla_ans3"
                    android:textAlignment="center"
                    android:textColor="#020202"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@+id/textView2"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/bangla_ans4"
                    android:textAlignment="center"
                    android:textColor="#020202"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@+id/textView4"
                    app:layout_constraintStart_toStartOf="@+id/textView4"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/bangla_ans5"
                    android:textAlignment="center"
                    android:textColor="#020202"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@+id/textView5"
                    app:layout_constraintStart_toStartOf="@+id/textView5"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/bangla_ans6"
                    android:textAlignment="center"
                    android:textColor="#020202"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@+id/textView6"
                    app:layout_constraintStart_toStartOf="@+id/textView6"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/bangla_ans7"
                    android:textAlignment="center"
                    android:textColor="#020202"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@+id/textView7"
                    app:layout_constraintStart_toStartOf="@+id/textView7"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/bangla_ans8"
                    android:textAlignment="center"
                    android:textColor="#020202"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@+id/textView8"
                    app:layout_constraintTop_toBottomOf="@+id/textView8" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/bangla_ans9"
                    android:textAlignment="center"
                    android:textColor="#020202"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@+id/textView9"
                    app:layout_constraintStart_toStartOf="@+id/textView9"
                    app:layout_constraintTop_toBottomOf="@+id/textView9" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/bangla_ans10"
                    android:textAlignment="center"
                    android:textColor="#020202"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@+id/textView10"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView10" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </ScrollView>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>