<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/d2"
    tools:context=".Quotes_English">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_marginTop="130dp"
        android:fontFamily="@font/berkshire_swash"
        android:text="“Quotes”"
        android:textAlignment="center"
        android:textColor="#0FB903"
        android:textSize="28sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="205dp"
        android:layout_height="305dp"
        android:layout_marginTop="22dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <ScrollView
            android:layout_width="205dp"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/berkshire_swash"
                    android:text="@string/quote1"
                    android:textAlignment="center"
                    android:textColor="#020202"
                    android:textSize="14sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/berkshire_swash"
                    android:text="@string/quote2"
                    android:textAlignment="center"
                    android:textColor="#020202"
                    android:textSize="14sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintEnd_toEndOf="@+id/textView"
                    app:layout_constraintHorizontal_bias="0.6"
                    app:layout_constraintStart_toStartOf="@+id/textView"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/berkshire_swash"
                    android:text="@string/quote3"
                    android:textAlignment="center"
                    android:textColor="#020202"
                    android:textSize="14sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintEnd_toEndOf="@+id/textView2"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/berkshire_swash"
                    android:text="@string/quote4"
                    android:textAlignment="center"
                    android:textColor="#020202"
                    android:textSize="14sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintEnd_toEndOf="@+id/textView4"
                    app:layout_constraintStart_toStartOf="@+id/textView4"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/berkshire_swash"
                    android:text="@string/quote5"
                    android:textAlignment="center"
                    android:textColor="#020202"
                    android:textSize="14sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintEnd_toEndOf="@+id/textView5"
                    app:layout_constraintStart_toStartOf="@+id/textView5"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/berkshire_swash"
                    android:text="@string/quote6"
                    android:textAlignment="center"
                    android:textColor="#020202"
                    android:textSize="14sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintEnd_toEndOf="@+id/textView6"
                    app:layout_constraintStart_toStartOf="@+id/textView6"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/berkshire_swash"
                    android:text="@string/quote7"
                    android:textAlignment="center"
                    android:textColor="#020202"
                    android:textSize="14sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintEnd_toEndOf="@+id/textView7"
                    app:layout_constraintStart_toStartOf="@+id/textView7"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/berkshire_swash"
                    android:text="@string/quote8"
                    android:textAlignment="center"
                    android:textColor="#020202"
                    android:textSize="14sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintEnd_toEndOf="@+id/textView8"
                    app:layout_constraintStart_toStartOf="@+id/textView8"
                    app:layout_constraintTop_toBottomOf="@+id/textView8" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/berkshire_swash"
                    android:text="@string/quote9"
                    android:textAlignment="center"
                    android:textColor="#020202"
                    android:textSize="14sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintEnd_toEndOf="@+id/textView9"
                    app:layout_constraintStart_toStartOf="@+id/textView9"
                    app:layout_constraintTop_toBottomOf="@+id/textView9" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/berkshire_swash"
                    android:text="@string/quote10"
                    android:textAlignment="center"
                    android:textColor="#020202"
                    android:textSize="14sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintEnd_toEndOf="@+id/textView10"
                    app:layout_constraintStart_toStartOf="@+id/textView10"
                    app:layout_constraintTop_toBottomOf="@+id/textView10" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/berkshire_swash"
                    android:text="@string/quote11"
                    android:textAlignment="center"
                    android:textColor="#020202"
                    android:textSize="14sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintEnd_toEndOf="@+id/textView11"
                    app:layout_constraintStart_toStartOf="@+id/textView11"
                    app:layout_constraintTop_toBottomOf="@+id/textView11" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/berkshire_swash"
                    android:text="@string/quote12"
                    android:textAlignment="center"
                    android:textColor="#020202"
                    android:textSize="14sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintEnd_toEndOf="@+id/textView12"
                    app:layout_constraintStart_toStartOf="@+id/textView12"
                    app:layout_constraintTop_toBottomOf="@+id/textView12" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/berkshire_swash"
                    android:text="@string/quote13"
                    android:textAlignment="center"
                    android:textColor="#020202"
                    android:textSize="14sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintEnd_toEndOf="@+id/textView13"
                    app:layout_constraintStart_toStartOf="@+id/textView13"
                    app:layout_constraintTop_toBottomOf="@+id/textView13" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/berkshire_swash"
                    android:text="@string/quote14"
                    android:textAlignment="center"
                    android:textColor="#020202"
                    android:textSize="14sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintEnd_toEndOf="@+id/textView14"
                    app:layout_constraintStart_toStartOf="@+id/textView14"
                    app:layout_constraintTop_toBottomOf="@+id/textView14" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/berkshire_swash"
                    android:text="@string/quote15"
                    android:textAlignment="center"
                    android:textColor="#020202"
                    android:textSize="14sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintEnd_toEndOf="@+id/textView15"
                    app:layout_constraintStart_toStartOf="@+id/textView15"
                    app:layout_constraintTop_toBottomOf="@+id/textView15" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/berkshire_swash"
                    android:text="@string/quote16"
                    android:textAlignment="center"
                    android:textColor="#020202"
                    android:textSize="14sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintEnd_toEndOf="@+id/textView16"
                    app:layout_constraintStart_toStartOf="@+id/textView16"
                    app:layout_constraintTop_toBottomOf="@+id/textView16" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/berkshire_swash"
                    android:text="@string/quote17"
                    android:textAlignment="center"
                    android:textColor="#020202"
                    android:textSize="14sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintEnd_toEndOf="@+id/textView17"
                    app:layout_constraintStart_toStartOf="@+id/textView17"
                    app:layout_constraintTop_toBottomOf="@+id/textView17" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>